--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 name: Jesse P. Harrison
-email: jesse.p.harrison@gmail.com
+email: jesse.harrison@csc.fi
 description: > # this means to ignore newlines until "url:"
   Data Scientist at CSC - IT Center for Science Ltd (Espoo, Finland)
 url: https://jessepharrison.github.io
